main part finished: the game is runablegit add .!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(cpu8080)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES src/main.cpp src/Intel8080.cpp)
+set(SOURCE_FILES src/InvadersIO.cpp src/Intel8080.cpp src/main.cpp )
 add_executable(cpu8080 ${SOURCE_FILES})
 
 INCLUDE(FindPkgConfig)
